Fixed alignement issue on word definition page

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -465,8 +465,9 @@ input[type=search]{
 
 .dictionary-definition  blockquote {
   background-color: var(--lightgrey);
-  margin-top:2em;
-  margin-left:0;
+  /* margin-top:2em;
+  margin-left:0; */
+  margin: 48px 0px;
   line-height: 1.5;
   padding:1em;
 }
@@ -494,7 +495,7 @@ blockquote {
 .context {
   border-left: 5px solid var(--darkred);
   font-size:calc(var(--funit)*0.75);
-  padding-left:24px;
+  padding:24px;
   margin-top:var(--vunit);
   background-color:var(--lightred);
 }
